# aimx

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  book.toml  build.rs  install.sh  portcheck.sh  prtcheck.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  site.yml
agents/claude-code/: README.md  SKILL.md.header
agents/claude-code/.claude-plugin/: plugin.json
agents/claude-code/skills/aimx/: SKILL.md.header
agents/codex/: README.md  SKILL.md.header
agents/common/: aimx-primer.md
agents/common/references/: frontmatter.md  hooks.md  mcp-tools.md  multi-domain.md  troubleshooting.md  workflows.md
agents/gemini/: README.md  SKILL.md.header
agents/goose/: README.md  aimx.yaml.header
agents/hermes/: README.md  SKILL.md.header
agents/nanoclaw/: README.md  SKILL.md.header
agents/openclaw/: README.md  SKILL.md.header
agents/opencode/: README.md  SKILL.md.header
book/: README.md  SUMMARY.md  agent-integration.md  channel-recipes.md  channels.md  cli.md  configuration.md  faq.md  getting-started.md  hook-recipes.md  hooks.md  index.md  installation.md  mailboxes.md  markdown-email.md  mcp.md  multi-domain.md  release-notes.md  security.md  setup.md  troubleshooting.md
book/diagrams/: architecture.mmd
docs/: hook-templates-prd.md  hook-templates-sprint.md  idea.md  manual-setup.md  manual-test-results.md  manual-test.md  pitch-singapore.md  prd.md  sprint.1.md  sprint.2.md  sprint.3.md  sprint.4.md  sprint.backlog.1.md  sprint.md
docs/guide/: configuration.md  getting-started.md  index.md  mailboxes.md  mcp.md  setup.md  troubleshooting.md
docs/research/: market-landscape-2026-04.md
hook-templates/: defaults.toml
scripts/: check-docs.sh
services/verifier/: .dockerignore  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/verifier/src/: main.rs
services/verify/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
services/verify/src/: echo.rs  main.rs
src/: agent_cleanup.rs  agent_remove.rs  agent_setup.rs  agent_tui.rs  agents_cleanup.rs  agents_mcp.rs  agents_remove.rs  agents_setup.rs  agents_tui.rs  auth.rs  channel.rs  cli.rs  config.rs  datadir_readme.md.tpl  datadir_readme.rs  dkim.rs  dkim_keys.rs  doctor.rs  domain.rs  domain_handler.rs  domain_list_handler.rs  frontmatter.rs  hook.rs  hook_client.rs  hook_handler.rs  hook_list_handler.rs  hook_substitute.rs  hook_templates_defaults.rs  hooks.rs  ingest.rs  logging.rs  logs.rs  mailbox.rs  mailbox_handler.rs  mailbox_list_handler.rs  mailbox_locks.rs  main.rs  markdown_render.rs  mcp.rs  mx.rs  (+25 more)
src/smtp/: mod.rs  session.rs  tests.rs  tls.rs
tests/: domains_remove.rs  domains_uds.rs  e2e_agent_flow.rs  hooks_list_filter.rs  install_sh.sh  integration.rs  isolation.rs  mailbox_isolation.rs  mcp_multi_domain.rs  multi_domain.rs  release_integration.rs  uds_authz.rs  upgrade.rs
tests/fixtures/: gmail_dkim_signed.eml  hook_templates_valid.toml  html_only.eml  multipart.eml  plain.eml  with_attachment.eml
tests/fixtures/config/: canonical-single-domain.toml  canonical-two-domains-with-overrides.toml  canonical-two-domains.toml  legacy-v1-single-domain.toml  legacy-v1-with-catchall.toml  mixed-legacy-fqdn.toml
tests/fixtures/markdown/: briefing-5kb.expected.html  briefing-5kb.md  report-50kb.expected.html  report-50kb.md
tests/fixtures/releases/: 0.0.0-fixture-sha256sums.txt  latest-happy.json  tag-1-2-3.json  tag-v1-2-3.json  v0.0.0-fixture-sha256sums.txt
tests/fixtures/upgrade/v1-single-domain/: config.toml
tests/fixtures/upgrade/v1-single-domain/inbox/info/: 2026-01-15-080000-hello-world.md  2026-01-16-093000-second-message.md
tests/fixtures/upgrade/v1-single-domain/inbox/support/: 2026-02-01-120000-bug-report.md  2026-02-02-150000-feature-request.md
website/: Makefile  README.md  book.toml
website/media/: README.md  hero-loop.tape  tour-60s.tape
website/public/: index.html  llms.txt  robots.txt  site.webmanifest  sitemap.xml
website/public/media/: tour-60s.vtt
website/public/scripts/: theme.js
website/public/styles/: index.css
website/scripts/: mermaid-zoom.js  nav.js
website/styles/: chrome.css  palette.css  typography.css
website/theme/: head.hbs  index.hbs
