[package]
name = "aimx"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["U-Zyn Chua <chua@uzyn.com>"]
description = "AI Mail Exchange - A self-hosted email server (SMTP) for AI agents."
license = "MIT"
readme = "README.md"
repository = "https://github.com/uzyn/aimx"
homepage = "https://aimx.email"
keywords = ["email", "smtp", "mcp", "self-hosted", "ai-agent"]
categories = ["command-line-utilities", "email"]
exclude = ["/etc", "/website"]

[features]
default = []
# Opt-in feature for Tier-2 integration tests that hit real network
# endpoints (GitHub Releases API + asset downloads). Enabled in CI via
# `cargo test --features integration`; omitted from the default
# `cargo test` so local runs stay offline and free of rate-limit flakes.
integration = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
mail-parser = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
html2text = "0.16"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
mail-auth = "0.7"
mime_guess = "2"
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "sync", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2"
serde_json = "1.0.149"
schemars = "1.2.1"
glob-match = "0.2"
libc = "0.2"
nix = { version = "0.29", default-features = false, features = ["fs", "user"] }
colored = "3"
rustls-pki-types = { version = "1", features = ["alloc"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls"] }
hickory-resolver = "0.25"
include_dir = "0.7"
sha2 = "0.10"
psl = "2"
unicode-normalization = "0.1"
rand = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
dialoguer = { version = "0.11", default-features = false }
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip", "json"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
wait-timeout = "0.2"
rcgen = "0.13"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-test = "0.2"
serial_test = "3"
# Dev-only: structural AST walk for the Sprint 3 legacy-template-phase
# regression guard in `src/setup.rs` tests. Replaces a brittle
# `include_str!` + substring grep with a proper syn visitor that matches
# on `ItemFn` signatures rather than source text.
syn = { version = "2", features = ["full", "visit"] }
# Dev-only: the Sprint 2 Tier-2 integration test in
# `tests/release_integration.rs` fetches release assets from GitHub.
# Pulled under the `integration` feature via `cargo test --features
# integration`; compiled unconditionally here because cargo does not
# support feature-gated `dev-dependencies`. Kept in sync with the main
# crate's `ureq` feature shape.
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip", "json"] }
serde_json = "1"
# Dev-only: needed by the Sprint 2 Tier-2 integration test to install
# the process-default rustls CryptoProvider before `ureq` (built with
# `rustls-no-provider`) performs its first TLS handshake. Mirrors the
# feature shape used by the main crate so we don't link a second
# crypto backend.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
