[package]
name = "aimx"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["U-Zyn Chua <chua@uzyn.com>"]
description = "SMTP for AI agents. No middleman. Self-hosted mail server (AI Mail Exchange) with built-in MCP."
license = "MIT"
readme = "README.md"
repository = "https://github.com/uzyn/aimx"
homepage = "https://aimx.email"
keywords = ["email", "smtp", "mcp", "self-hosted", "ai-agent"]
categories = ["command-line-utilities", "email"]
exclude = ["/etc", "/website"]

[features]
default = []
# Opt-in feature for Tier-2 integration tests that hit real network
# endpoints (GitHub Releases API + asset downloads). Enabled in CI via
# `cargo test --features integration`; omitted from the default
# `cargo test` so local runs stay offline and free of rate-limit flakes.
integration = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
mail-parser = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
html2text = "0.17"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
mail-auth = "0.7"
mime_guess = "2"
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "sync", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2"
serde_json = "1.0.149"
schemars = "1.2.1"
glob-match = "0.2"
libc = "0.2"
nix = { version = "0.31", default-features = false, features = ["fs", "user"] }
colored = "3"
rustls-pki-types = { version = "1", features = ["alloc"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls"] }
hickory-resolver = "0.25"
include_dir = "0.7"
sha2 = "0.10"
psl = "2"
unicode-normalization = "0.1"
rand = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
dialoguer = { version = "0.12", default-features = false }
# Agent-setup TUI. Hand-rolled checkbox renderer on top of `console::Term`
# / `console::Key` to match the Claude Code / OpenClaw multi-select look
# (colored caret + filled/hollow mark + dim non-selectable rows).
# dialoguer's MultiSelect doesn't support non-selectable rows cleanly and
# its default theme ships blue-bold, which conflicts with branding — so
# we drive `console` directly. `console` is already a transitive dep via
# dialoguer; declaring it here keeps the dependency explicit and avoids
# relying on a sibling's re-export.
console = { version = "0.16", default-features = false, features = ["ansi-parsing"] }
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip", "json"] }
# `aimx upgrade` extracts release tarballs produced by
# `.github/workflows/release.yml`. The shape is well-known (a flat
# `aimx-<version>-<target>/` directory with the `aimx` binary), so the
# upgrade path only needs gzip + basic tar extraction — no rollback,
# no symlink handling. `tar` + `flate2` are the obvious minimal deps.
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# `aimx upgrade` stages the extracted tarball in a tempdir before
# atomically swapping the binary into place. Pulled into runtime deps
# (not just dev-deps) so `run_upgrade` can call `tempfile::tempdir`
# directly rather than re-implementing tempdir cleanup by hand.
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wait-timeout = "0.2"
rcgen = "0.14"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-test = "0.2"
serial_test = "3"
# Dev-only: structural AST walk for the legacy-template-phase
# regression guard in `src/setup.rs` tests. Replaces a brittle
# `include_str!` + substring grep with a proper syn visitor that matches
# on `ItemFn` signatures rather than source text.
syn = { version = "2", features = ["full", "visit"] }
# Dev-only: the Tier-2 integration test in
# `tests/release_integration.rs` fetches release assets from GitHub.
# Pulled under the `integration` feature via `cargo test --features
# integration`; compiled unconditionally here because cargo does not
# support feature-gated `dev-dependencies`. Kept in sync with the main
# crate's `ureq` feature shape.
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip", "json"] }
serde_json = "1"
# Dev-only: needed by the Tier-2 integration test to install
# the process-default rustls CryptoProvider before `ureq` (built with
# `rustls-no-provider`) performs its first TLS handshake. Mirrors the
# feature shape used by the main crate so we don't link a second
# crypto backend.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
# Dev-only: the upgrade-end-to-end test in
# `tests/release_integration.rs` uses `libc::geteuid` to detect whether
# the integration test is running as root; in that case it drives the
# real `aimx upgrade --dry-run` path end-to-end against the fixture
# release, exercising `RealReleaseOps::fetch_asset` with the full TLS
# wiring.
libc = "0.2"
