[package]
name = "aimx"
version = "0.2.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["U-Zyn Chua <chua@uzyn.com>"]
description = "SMTP for AI agents. No middleman. Self-hosted mail server (AI Mail Exchange) with built-in MCP."
license = "MIT"
readme = "README.md"
repository = "https://github.com/uzyn/aimx"
homepage = "https://aimx.email"
keywords = ["email", "smtp", "mcp", "self-hosted", "ai-agent"]
categories = ["command-line-utilities", "email", "artificial-intelligence"]
exclude = [
    "/etc",
    "/website",
    "/.github",
    "/scripts"
]

[features]
default = []
integration = []

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
mail-parser = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
html2text = "0.17"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
mail-auth = "0.9"
mime_guess = "2"
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "time", "sync", "signal"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = "2"
serde_json = "1.0.150"
schemars = { version = "1.2.1", features = ["preserve_order"] }
glob-match = "0.2"
libc = "0.2"
nix = { version = "0.31", default-features = false, features = ["fs", "user"] }
colored = "3"
rustls-pki-types = { version = "1", features = ["alloc"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1", "tokio1-rustls-tls"] }
hickory-resolver = "0.26"
include_dir = "0.7"
sha2 = "0.11"
psl = "2"
unicode-normalization = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
dialoguer = { version = "0.12", default-features = false }
console = { version = "0.16", default-features = false, features = ["ansi-parsing", "std", "alloc"] }
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "rustls-webpki-roots", "gzip", "json"] }
tar = "0.4"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
comrak = { version = "=0.52.0", default-features = false }
lol_html = "3"
tempfile = "3"
sparkv = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wait-timeout = "0.2"
rcgen = "0.14"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing-test = "0.2"
serial_test = "3"
syn = { version = "2", features = ["full", "visit"] }
