[package]
name = "aimx-verifier"
version = "0.1.0"
edition = "2021"
description = "Verification service for aimx. Port probe and SMTP listener."
license = "MIT"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
