[package]
name = "aimx-verify"
version = "0.1.0"
edition = "2021"
description = "Verification service for aimx - port probe and email echo"
license = "MIT"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = "0.9"
mail-auth = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
